# codeshark

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.example.toml  design-qa.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
assets/: README.md
docs/: telegram.md
scripts/: install.sh  install_launch_agent.py  release_check.py  uninstall_launch_agent.py
src/codex_codeshark/: __init__.py  __main__.py  app.py  automation.py  codex_runner.py  config.py  doctor.py  identity.py  learning.py  local_console.py  memory.py  menu_bar.swift  migration.py  projects.py  recall.py  service.py  setup_cli.py  state.py  telegram_api.py  vault.py
tests/: test_app.py  test_automation.py  test_codex_runner.py  test_config.py  test_identity.py  test_install_script.py  test_learning.py  test_local_console.py  test_memory.py  test_migration.py  test_recall.py  test_release.py  test_service.py  test_setup_cli.py  test_state.py  test_telegram_api.py  test_text.py  test_vault.py
workspace/: README.md
