[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-codeshark"
version = "0.1.0"
description = "Codex-codeshark private Telegram gateway for a local OpenAI Codex CLI session"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-codeshark = "codex_codeshark.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
